<resources>
    <string name="app_name">mooSocial Community</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="login_error_email">Enter a valid email address</string>
    <string name="login_error_password">Password is required</string>
    <string name="login_create_account">No account yet? Create one</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="toolbar_title_home">Home</string>
    <string name="navigation_drawer_opened">Navigation drawer is opened</string>
    <string name="navigation_drawer_closed">Navigation drawer is closed</string>
    <string name="tab_everyone">Everyone</string>
    <string name="tab_friends">Friends &amp; Me</string>
    <string name="action_account">Account</string>
    <string name="action_notifications">Notification</string>
    <string name="action_logout">Logout</string>
    <string name="moo_search_hint">Search...</string>
    <string name="connect_error">No internet connection</string>
    <string name="text_reconnect">Retry</string>
    <string name="search_no_result">No Results Found</string>
    <string name="text_see_all">See All</string>
    <string name="toolbar_title_search">Search</string>
    <string name="text_see_all_results">See All Results</string>
    <string name="text_view_all">View All</string>
    <string name="toolbar_title_signup">Sign Up</string>
    <string name="login_hint_name">Name</string>
    <string name="signup_button_create">Create</string>
    <string name="term_service_text">Terms of Service</string>
    <string name="signup_error_name">Name is required</string>
    <string name="signup_error_term">Term of Service is required</string>
    <string name="signup_title">Create a New Account!</string>
    <string name="signup_gender">Gender</string>
    <string name="signup_gender_male">Male</string>
    <string name="signup_gender_female">Female</string>
    <string name="signup_description">The social network for people with Shared Interests.</string>
    <string name="login_hint_birthday">Birthday</string>
    <string name="signup_error_gender">Gender is required</string>
    <string name="signup_error_birthday">Birthday is required</string>
    <string name="signup_error_disable">Admin has disabled registration on this site</string>
    <string name="signup_error_get_config">Error when load config from server</string>
    <string name="text_setting">Setting</string>
    <string name="toolbar_title_message">Messages</string>
    <string name="text_language">Language</string>
    <string name="text_setting_notification">Notifications</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="text_forgot">Forgot password</string>
    <string name="forgot_button_submit">Submit</string>
    <string name="forgot_text_successful">An email has been sent to the email address that you entered. Please follow the instructions to reset your password. Check your spam folder if you don\'t see it</string>
    <string name="action_mark_as_read">Mark as read</string>
    <string name="action_delete">Delete</string>
    <string name="signup_gender_unknown">Unknown</string>

    <string name="text_post">Post</string>
    <string name="text_what_new">What\'s New</string>
    <string name="text_hint_what_new">Share what\'s new</string>
    <string name="text_tag_friend">Tag Friends</string>
    <string name="text_hint_serach_friend">Search friends</string>
    <string name="text_done">Done</string>
    <string name="text_friends">Friends</string>
    <string name="text_status_tag_one_friend">- with</string>
    <string name="text_status_tag_morefriend">- with %1$s and %2$s.</string>
    <string name="text_others">others</string>
    <string name="text_privacy_public">Public</string>
    <string name="text_privacy_friend">Friend</string>
    <string name="text_privacy_onlyme">Only me</string>
    <string name="text_error_share_status">Share whats new can not empty</string>
    <string name="text_error_post_image">Error when upload image</string>
    <string name="text_ok">Ok</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_link_hint">Type or past link here</string>
    <string name="text_link_error">Please add validate link</string>
    <string name="text_hint_comment">Write a comment</string>
    <string name="text_error_comment">Comment can not empty</string>
	<string name="text_login">Login</string>
	<string name="text_sign_in">Sign In</string>
	<string name="text_or_sign_with">Or Sign In With</string>
	<string name="text_langing_intro_1">Because every online community needs an app</string>
	<string name="text_send">Send</string>
	<string name="text_sign_up">Sign Up</string>
	<string name="text_create">Create</string>
	<string name="text_or_mail">Or Mail</string>
    <string name="privacy_service_text">Privacy</string>

    <string name="text_slide1">Helps building online community easily and affordably</string>
    <string name="text_slide2">The most featured packed, stable and fastest “mobile-friendly” social network software</string>
    <string name="text_slide3">Expand easily, affordably with high-quality plugins and themes made by the same team</string>
    <string name="text_slide4">Publishable mobile apps will bring your community closer customers\' finger tip</string>

</resources>
