<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

    <android.support.design.widget.TabLayout
        android:id="@+id/sliderDots"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@drawable/slider_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        android:layout_marginBottom="132dp"/>.
    <FrameLayout
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">
            <TextView android:id="@+id/link_languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:text="asdasdsad" />
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_width="match_parent">

                <Button
                    android:text="@string/toolbar_title_signup"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:layout_margin="3dp"
                    android:textColor="@color/langing_button_color"
                    android:background="@color/langing_button_login_background_color"
                    android:id="@+id/signup" />

                <Button
                    android:text="@string/text_login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/langing_button_color"
                    android:background="@color/langing_button_signup_background_color"
                    android:id="@+id/login" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_width="match_parent">

                <TextView android:id="@+id/link_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_service_text"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16dip"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="|"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="16dip"/>

                <TextView android:id="@+id/link_term"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term_service_text"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textSize="16dip"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
