<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/moo_body"
    android:background="@drawable/ic_background_slide_1"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">
        <TextView android:id="@+id/link_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:paddingTop="20dp"
            android:paddingRight="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="100dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            >
            <TextView
                android:layout_width="260dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Because every online community needs an app"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <View android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_width="match_parent">

                <Button
                    android:text="@string/toolbar_title_signup"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:layout_margin="3dp"
                    android:textColor="@color/langing_button_color"
                    android:background="@color/langing_button_login_background_color"
                    android:id="@+id/signup" />

                <Button
                    android:text="@string/text_login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/langing_button_color"
                    android:background="@color/langing_button_signup_background_color"
                    android:id="@+id/login" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView android:id="@+id/link_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_service_text"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16dip"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="|"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="16dip"/>

                <TextView android:id="@+id/link_term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/term_service_text"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16dip"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
