
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:id="@+id/moo_body"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/ic_background_slide_1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:layout_height="match_parent"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:paddingLeft="10dp"
                android:layout_height="fill_parent"
                android:background="?android:selectableItemBackground"
                android:id="@+id/img_back"
                android:src="@drawable/ic_bar_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_forgot"
                android:gravity="center"
                android:textSize="11pt"
                android:paddingLeft="30dp"
                android:textColor="@color/white"
                android:id="@+id/editText"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content" android:layout_gravity="left"
            android:layout_height="match_parent">
            <Button
                android:text="@string/text_send"
                android:layout_width="68dp"
                android:layout_height="32dp"
                android:layout_margin="3pt"
                android:textColor="@color/status_button_post_color"
                android:background="@color/status_button_post_background_color"
                android:id="@+id/send" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="5dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_gravity="fill_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/forgot_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Holo.Light.ProgressBar.Large"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:visibility="gone"
                android:layout_gravity="fill_vertical"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id ="@+id/forgot_successful"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_text_successful"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:id ="@+id/forgot_content"
            android:paddingTop="16dp"
            android:layout_height="wrap_content">

            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/textinputlayout_email"
                android:paddingTop="8dp"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/login_hint_email" />
                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_error_message"
                    android:autoText="false"
                    android:textColor="@color/error_message"
                    android:paddingBottom="8dp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>