<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:layout_height="match_parent"
                android:weightSum="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:paddingLeft="10dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/btn_back"
                    android:src="@drawable/ic_bar_arrow_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="11pt"
                    android:textColor="@color/white"
                    android:id="@+id/text_bar"
                    android:layout_weight="1" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content" android:layout_gravity="left"
                android:layout_height="match_parent">
                <Button
                    android:text="@string/text_done"
                    android:layout_width="68dp"
                    android:layout_height="32dp"
                    android:layout_margin="3pt"
                    android:textColor="@color/status_button_post_color"
                    android:background="@color/status_button_post_background_color"
                    android:id="@+id/done" />
            </LinearLayout>

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:background="@drawable/boder_bottom"
            android:id="@+id/linearLayout"
            android:paddingLeft="15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_black_24"/>
            <EditText
                android:layout_width="wrap_content"
                android:id="@+id/suggest_search"
                android:hint="@string/text_hint_serach_friend"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <HorizontalScrollView
                android:id="@+id/horizontal_scroll"
                android:layout_width="match_parent"
                android:paddingLeft="10dp"
                android:scrollbars="none"
                android:paddingTop="5dp"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:scrollbars="none"
                    android:id="@+id/list_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_friends"
                android:textSize="18sp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_alignParentStart="true">

            <ListView
                android:id="@+id/list_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></ListView>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
